using HSCSAPI.Models.Enums;
using HSCSAPI.Models.Profiles;

namespace HSCSAPI.Models.Relations;

public class PatientAuthorizedMember
{
    public Guid PatientId { get; set; }
    public Guid AuthorizedMemberId { get; set; }
    public RelationshipType RelationshipType { get; set; }
    public DateTime AuthorizedAt { get; set; }
    public bool IsActive { get; set; } = true;

    public Patient Patient { get; set; } = null!;
    public AuthorizedMember AuthorizedMember { get; set; } = null!;
}
